--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@vis.gl/react-google-maps": "^1.2.0",
     "firebase": "^10.13.2",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.28",
