--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "@vis.gl/react-google-maps": "^1.2.0",
+    "axios": "^1.7.7",
     "firebase": "^10.13.2",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.28",
@@ -19,6 +20,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "redux-persist": "^6.0.0",
