--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express": "^4.19.2",
     "flowbite-react": "^0.10.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.2",
-    "nodemon": "^3.1.4"
+    "mongoose": "^8.5.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
