--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.28",
     "install": "^0.13.0",
+    "lucide-react": "^0.469.0",
     "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
