Changes to be committed: 	modified:   client/package-lock.json 	modified:   client/package.json 	new file:   client/src/components/mapPage/Directions.jsx 	modified:   client/src/components/mapPage/MapComp.jsx 	new file:   client/src/components/mapPage/NewMapComp.jsx 	new file:   client/src/components/mapPage/timeline.jsx 	new file:   client/src/components/shared/dest-dropdown.jsx 	modified:   client/src/pages/MapPage.jsx 	modified:   package-lock.json 	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.19.2",
     "flowbite-react": "^0.10.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.2"
+    "mongoose": "^8.5.2",
+    "prop-types": "^15.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
