--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.3.0",
+    "@mui/material": "^6.3.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@vis.gl/react-google-maps": "^1.2.0",
     "axios": "^1.7.7",
@@ -19,7 +23,9 @@
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.28",
     "install": "^0.13.0",
+    "lodash": "^4.17.21",
     "npm": "^10.9.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
@@ -27,7 +33,9 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
+    "react-select": "^5.9.0",
     "react-slick": "^0.30.2",
+    "reactstrap": "^9.2.3",
     "redux-persist": "^6.0.0",
     "remixicon": "^4.3.0",
     "slick-carousel": "^1.8.1",
