--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,17 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.7",
     "@vis.gl/react-google-maps": "^1.2.0",
+    "apexcharts": "^4.3.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
     "firebase": "^10.13.2",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.28",
     "install": "^0.13.0",
     "npm": "^10.9.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
+    "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
