--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "bootstrap": "^5.3.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "flowbite-react": "^0.10.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
+    "nodemailer": "^6.10.0",
     "prop-types": "^15.8.1"
   },
   "devDependencies": {
