--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
+    "@react-pdf/renderer": "^4.2.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@vis.gl/react-google-maps": "^1.2.0",
     "apexcharts": "^4.3.0",
