--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,14 +20,8 @@ pipeline {
         stage('Login to ACR') {
             steps {
                 script {
-                    sh '''
-                        az login --service-principal -u $AZURE_CREDENTIALS_USR -p $AZURE_CREDENTIALS_PSW --tenant $AZ_TENANT_ID
-                        az acr login -n $ACR_NAME
-                        
-                        ACR_USER=$(az acr credential show -n $ACR_NAME --query "username" -o tsv)
-                        ACR_PWD=$(az acr credential show -n $ACR_NAME --query "passwords[0].value" -o tsv)
-                        docker login $ACR_LOGIN_SERVER -u $ACR_USER -p $ACR_PWD
-                    '''
+                    // Use Azure CLI to login to ACR
+                    bat "az acr login --name %ACR_NAME%"
                 }
             }
         }
@@ -35,21 +29,58 @@ pipeline {
         stage('Build and Push Docker Image') {
             steps {
                 script {
-                    sh '''
-                        docker build -t $ACR_LOGIN_SERVER/$IMAGE_NAME:latest .
-                        docker push $ACR_LOGIN_SERVER/$IMAGE_NAME:latest
+                    // Build the Docker image and push it to ACR
+                    bat '''
+                        docker build -t %ACR_LOGIN_SERVER%/%IMAGE_NAME% .
+                        docker push %ACR_LOGIN_SERVER%/%IMAGE_NAME%
                     '''
                 }
             }
         }
-    }
 
-    post {
-        success {
-            echo 'Docker image built and pushed to ACR successfully.'
+        stage('Get AKS Credentials') {
+            steps {
+                bat '''
+                    az aks get-credentials --resource-group Travel_Agency --name TravelWebApp --overwrite-existing
+                '''
+            }
         }
-        failure {
-            echo 'Pipeline failed. Check the console output for errors.'
+
+        stage('Create Kubernetes Secret for ACR') {
+            steps {
+                bat '''
+                    FOR /F "tokens=*" %%u IN ('az acr credential show -n %ACR_NAME% --query "username" -o tsv') DO (
+                        FOR /F "tokens=*" %%p IN ('az acr credential show -n %ACR_NAME% --query "passwords[0].value" -o tsv') DO (
+                            kubectl create secret docker-registry acr-auth ^
+                                --docker-server=%ACR_LOGIN_SERVER% ^
+                                --docker-username=%%u ^
+                                --docker-password=%%p ^
+                                --dry-run=client -o yaml | kubectl apply -f -
+                        )
+                    )
+                '''
+            }
+        }
+
+        stage('Apply Kubernetes Deployment') {
+            steps {
+                bat '''
+                    kubectl apply -f kubernetes/deployment.yml
+                    kubectl get deployments
+                    kubectl rollout restart deployment travelapp-deployment
+                    kubectl rollout status deployment travelapp-deployment
+                '''
+            }
+        }
+
+        stage('Post Actions') {
+            steps {
+                script {
+                    // Handle failure in pipeline (optional)
+                    currentBuild.result = 'SUCCESS'
+                    echo "Pipeline execution completed successfully."
+                }
+            }
         }
     }
 }
